--- a/.gitignore
+++ b/.gitignore
@@ -207,5 +207,11 @@ marimo/_lsp/
 __marimo__/
 
 
-#secret Firebase key
-/app/secrets/firebase-service-account.json
+
+# Firebase credentials
+app/secrets/firebase-service-account.json
+
+# Optional: ignore all JSON secrets
+*.secret.json
+*.key.json
+**/firebase-service-account.json
